--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "private": true,
   "dependencies": {
     "classnames": "2.2.5",
-    "material-ui": "v1.0.0-beta.36",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
+    "material-ui": "1.0.0-beta.36",
+    "material-ui-icons": "1.0.0-beta.36",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
-    "react-swipeable-views": "^0.12.13",
-    "react-swipeable-views-core": "^0.12.11",
-    "react-swipeable-views-utils": "^0.12.13"
+    "react-swipeable-views-core": "0.12.11",
+    "react-swipeable-views-utils": "0.12.13"
   },
   "scripts": {
     "start": "react-scripts start",
