--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
+    "react-swipeable-views": "0.12.13",
     "react-swipeable-views-core": "0.12.11",
     "react-swipeable-views-utils": "0.12.13"
   },
