--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "16.2.0",
     "react-dev-utils": "^5.0.0",
@@ -44,6 +45,7 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
     "react-swipeable-views": "0.12.13",
+    "react-swipeable-views-utils": "0.12.13",
     "recompose": "^0.26.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
