--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-jsx-control-statements": "3.2.8",
     "babel-preset-env": "1.6.1",
+    "babel-root-import": "^4.1.8",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
