--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auto-bind": "1.2.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -10,7 +11,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-jsx-control-statements": "3.2.8",
     "babel-preset-env": "1.6.1",
-    "babel-root-import": "^4.1.8",
+    "babel-root-import": "4.1.8",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -46,6 +47,7 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
     "react-swipeable-views": "0.12.13",
+    "react-swipeable-views-core": "0.12.11",
     "react-swipeable-views-utils": "0.12.13",
     "recompose": "^0.26.0",
     "style-loader": "0.19.0",
