--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "15.6.1",
     "raf": "3.4.0",
     "react": "16.2.0",
+    "react-autobind": "1.0.6",
     "react-dev-utils": "^5.0.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
