--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
+    "react-swipeable-views": "0.12.13",
     "recompose": "^0.26.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
