--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "auto-bind": "1.2.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -47,6 +46,7 @@
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
+    "react-swipeable-views": "0.12.13",
     "recompose": "^0.26.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
