--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "1.1.11",
+    "apollo-client": "2.2.7",
+    "apollo-client-preset": "1.0.8",
+    "apollo-link-http": "1.5.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-plugin-jsx-control-statements": "3.2.8",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-root-import": "4.1.8",
     "babel-runtime": "6.26.0",
@@ -30,8 +35,11 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.8.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "4.17.5",
     "material-ui": "1.0.0-beta.36",
     "material-ui-icons": "1.0.0-beta.36",
     "object-assign": "4.1.1",
@@ -41,6 +49,7 @@
     "prop-types": "15.6.1",
     "raf": "3.4.0",
     "react": "16.2.0",
+    "react-apollo": "2.0.4",
     "react-autobind": "1.0.6",
     "react-dev-utils": "^5.0.0",
     "react-dom": "16.2.0",
