--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "15.6.1",
+    "query-string": "6.0.0",
     "raf": "3.4.0",
     "react": "16.2.0",
     "react-apollo": "2.0.4",
     "react-autobind": "1.0.6",
     "react-dev-utils": "^5.0.0",
     "react-dom": "16.2.0",
+    "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.1",
     "react-swipeable-views": "0.12.13",
